--- a/src/app/components/artist-list/artist-list.component.html
+++ b/src/app/components/artist-list/artist-list.component.html
@@ -1,11 +1,14 @@
-<h2>Lista de Artistas</h2>
-<table class="table table-striped">
+<h2 class="text-center" style="color: rgb(137, 195, 223);">Lista de Artistas</h2>
+<table class="table table-striped table-bordered border-primary">
     <thead class="thead bg-primary text-white">
         <tr>
             <th scope="col">ID</th>
             <th scope="col">Nombre</th>
             <th scope="col">Edad</th>
             <th scope="col">Popularidad</th>
+            <th scope="col">Ver/Editar</th>
+            <th scope="col">Borrar</th>
+
         </tr>
 
     </thead>
@@ -21,28 +24,36 @@
     </tr>
 </tbody>
 </table>
+<!--
+<h2>Agregar Artista:</h2>
+<form [formGroup]="artistForm">
+    <tfoot>
+        <tr>
+            <td>
+                <input formControlName="id" placeholder="ID">
+                <p *ngIf="id.touched && id.errors && id.errors['required']">Obligatorio</p>
+            </td>
+            <td>
+                <input formControlName="nameArtist" placeholder="NAME">
+                <p *ngIf="nameArtist.touched && nameArtist.errors && nameArtist.errors['required']">Obligatorio</p>
+            </td>
+            <td>
+                <input formControlName="age" placeholder="AGE">
+                <p *ngIf="age.touched && age.errors && age.errors['required']">Obligatorio</p>
+            </td>
+            <td>
+                <input formControlName="popularity" placeholder="POPULARIDAD">
+                <p *ngIf="popularity.touched && popularity.errors && popularity.errors['required']">Obligatorio</p>
+            </td>
+            <td>
+                <button (click)='add()'>ADD</button>
+            </td>
+        </tr>
 
-<h2>Agregar Artista: </h2>
-<tfoot>
-    <form [formGroup] = "artistForm">
-    <tr>
-       <td>Ingresar un ID: <input formControlName = "id" placeholder="ID"></td>
-       <p *ngIf="id.errors && id.errors['required']">Obligatorio</p>
-       <td>Ingresar un Nombre: <input formControlName = "nameArtist" placeholder="Name"> </td>
-       <td>Ingresar la edad: <input formControlName = "age" placeholder="AGE"> </td>
-       <td>Ingresar popularidad: <input formControlName = "popularity" placeholder="POPULARIDAD"></td>
-       <button (click)='add()'>ADD</button>
+    </tfoot>
 
-      <!--
-       <td>Ingresar Nombre del artista: <input [(ngModel)]= "inputName" placeholder="NAME" name="InputName"></td>
-       <td>Ingresar Edad del Artista: <input [(ngModel)] ="inputEdad" placeholder= "AGE" name="inputEdad"></td>
-       <td>Ingresar Popularidad: <input [(ngModel)]= "inputPopul" placeholder="POPULARITY" name="inputPopularidad"></td>
-       <td><button (click)='add()'>ADD</button></td>
-       -->
-    </tr>
 </form>
-    
-</tfoot>
+-->
 
 <ng-template #ver let-modal>
     <div class="modal-header">
@@ -66,9 +77,39 @@
         <button class="btn btn-primary" (click)="modal.close()"> Guardar</button>
 
     </div>
-
-
-
-
 </ng-template>
+
+<br>
+
+<div class="card" style="background-color: rgb(162, 196, 224); padding: 20px; border-radius: 12px; margin: 20px;">
+    <h2 style="color: aliceblue;">Agregar Artista:</h2>
+    <br>
+    <form [formGroup]="artistForm">
+        <tfoot>
+            <tr>
+                <td>
+                    <input formControlName="id" placeholder="ID">
+                    <p *ngIf="id.touched && id.errors && id.errors['required']">Obligatorio</p>
+                </td>
+                <td>
+                    <input formControlName="nameArtist" placeholder="NAME">
+                    <p *ngIf="nameArtist.touched && nameArtist.errors && nameArtist.errors['required']">Obligatorio</p>
+                </td>
+                <td>
+                    <input formControlName="age" placeholder="AGE">
+                    <p *ngIf="age.touched && age.errors && age.errors['required']">Obligatorio</p>
+                </td>
+                <td>
+                    <input formControlName="popularity" placeholder="POPULARIDAD">
+                    <p *ngIf="popularity.touched && popularity.errors && popularity.errors['required']">Obligatorio</p>
+                </td>
+                <td>
+                    <button type="button" style="margin-left: 5px;" class="btn btn-light" (click)='add()'>Agregar</button>
+                </td>
+            </tr>
+
+        </tfoot>
+
+    </form>
+</div>
 
