--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,3 +1,2 @@
-
-  <app-album-list></app-album-list>
-  <app-artist-list></app-artist-list>
+<app-album-list></app-album-list>
+<!--<app-artist-list></app-artist-list>-->
