--- a/src/app/components/album-list/album-list.component.html
+++ b/src/app/components/album-list/album-list.component.html
@@ -1,1 +1,92 @@
-<p>album-list works!</p>
+<br>
+<!--LISTA DE ALBUMS-->
+<h2 class="text-center" style="color: rgb(137, 195, 223);">Lista de Albums</h2>
+<table class="table table-striped table-bordered border-primary">
+    <thead class="thead bg-primary text-white">
+        <tr>
+            <th scope="col">ID</th>
+            <th scope="col">Nombre</th>
+            <th scope="col">Total de tracks</th>
+            <th scope="col">Año de lanzamiento</th>
+            <th scope="col">Popularidad</th>
+            <th scope="col">Géneros</th>
+            <th scope="col">Artista</th>
+            <th scope="col">Borrar</th>
+            <th scope="col">Editar</th>
+
+
+
+        </tr>
+
+    </thead>
+<tbody>
+    <tr *ngFor="let album of albumList">
+        <td>{{album.id}}</td>
+        <td>{{album.albumName}}</td>
+        <td>{{album.totalTracks}}</td>
+        <td>{{album.releaseYear}}</td>
+        <td>{{album.popularity}}</td>
+        <td>{{album.genres}}</td>
+        <td>{{album.artist}}</td>
+        <td><button class="btn btn-danger btn-sm" (click)="delete(album.id)">X</button></td>
+        <!--
+        <td><button class="btn btn-primary btn-sm" (click)="view(ver,artist)">Ver</button></td>
+        <td><button class="btn btn-danger btn-sm" (click)="delete(artist.id)">Borrar</button></td>
+        -->
+
+    </tr>
+</tbody>
+</table>
+
+<br>
+
+<!--Agregar Album-->
+<div class="card" style="background-color: rgb(162, 196, 224); padding: 20px; border-radius: 12px;">
+    <h2 style="color: aliceblue;">Agregar Album:</h2>
+    <br>
+    <form [formGroup]="albumForm">
+        <tfoot>
+            <tr>
+                <td>
+                    <input formControlName="id" placeholder="ID">
+                    <p *ngIf="id.touched && id.errors && id.errors['required']">Obligatorio</p>
+                </td>
+                <td>
+                    <input formControlName="albumName" placeholder="NAME">
+                    <p *ngIf="albumName.touched && albumName.errors && albumName.errors['required']">Obligatorio</p>
+                </td>
+                <td>
+                    <input formControlName="totalTracks" placeholder="TOTAL TRACKS">
+                    <p *ngIf="totalTracks.touched && totalTracks.errors && totalTracks.errors['required']">Obligatorio</p>
+                </td>
+                <td>
+                    <input formControlName="releaseYear" placeholder="RELEASE YEAR">
+                    <p *ngIf="releaseYear.touched && releaseYear.errors && releaseYear.errors['required']">Obligatorio</p>
+                </td>
+                <td>
+                    <input formControlName="popularity" placeholder="POPULARITY">
+                    <p *ngIf="popularity.touched && popularity && popularity.errors['required']">Obligatorio</p>
+                </td>
+                <td>
+                    <input formControlName="genres" placeholder="GENRES">
+                    <p *ngIf="genres.touched && genres && genres.errors['required']">Obligatorio</p>
+                </td>
+                <td>
+                    <select name="artist" formControlName="artist">
+                        <option *ngFor="let artist of artistList" [ngValue]="artist">{{artist.nameArtist}}</option>
+                    </select>
+                </td>
+
+            </tr>
+            <br>
+            <tr>
+                
+                <td>
+                    <button type="button" style="margin-left: 300%;" class="btn btn-light" (click)='add()'>Agregar</button>
+                </td>
+            </tr>
+
+        </tfoot>
+
+    </form>
+</div>
