cambios en componente list y el html del mismo

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,2 +1,9 @@
+<!-- Just an image -->
+<nav class="navbar navbar-light" style="background-color: #000000;">
+    <a class="navbar-brand" href="#" style="margin-left: 10px;">
+      <img src="assets/Iconss.png" width="50" height="50" alt="">
+    </a>
+    
+  </nav>
 <app-album-list></app-album-list>
 <!--<app-artist-list></app-artist-list>-->
