--- a/src/app/components/album-list/album-list.component.html
+++ b/src/app/components/album-list/album-list.component.html
@@ -1,8 +1,8 @@
 <br>
 <!--LISTA DE ALBUMS-->
-<h2 class="text-center" style="color: rgb(137, 195, 223);">Lista de Albums</h2>
-<table class="table table-striped table-bordered border-primary">
-    <thead class="thead bg-primary text-white">
+<h2 class="text-center text-uppercase" style="color: rgb(188, 137, 236); font-weight: bold;">Lista de Albums</h2>
+<table class="table">
+    <thead class="thead-dark" style="background-color: black; color: rgb(188, 150, 224);">
         <tr>
             <th scope="col">ID</th>
             <th scope="col">Nombre</th>
@@ -11,8 +11,8 @@
             <th scope="col">Popularidad</th>
             <th scope="col">Géneros</th>
             <th scope="col">Artista</th>
-            <th scope="col">Borrar</th>
             <th scope="col">Editar</th>
+            <th scope="col">Borrar</th>
 
 
 
@@ -27,12 +27,10 @@
         <td>{{album.releaseYear}}</td>
         <td>{{album.popularity}}</td>
         <td>{{album.genres}}</td>
-        <td>{{album.artist}}</td>
+        <td>{{album.artist.nameArtist}}</td>
+        <td><button class="btn btn-primary btn-sm" (click)="view(ver,album)">Ver</button></td>
         <td><button class="btn btn-danger btn-sm" (click)="delete(album.id)">X</button></td>
-        <!--
-        <td><button class="btn btn-primary btn-sm" (click)="view(ver,artist)">Ver</button></td>
-        <td><button class="btn btn-danger btn-sm" (click)="delete(artist.id)">Borrar</button></td>
-        -->
+        
 
     </tr>
 </tbody>
@@ -40,9 +38,42 @@
 
 <br>
 
+<!--MODAL-->
+<ng-template #ver let-modal>
+    <div class="modal-header" style="background-color:  rgb(188, 150, 224);">
+        <h5 class="modal-title" style="color: rgb(91, 58, 122);">Modificar Album</h5>
+        <button (click)="modal.dismiss()">X</button>
+
+    </div>
+    <div class="modal-body">
+        <label>Id: </label>
+        <input class= "form-control" [(ngModel)]="InputIDV" readonly> <br>
+        <label>Nombre Album: </label>
+        <input class="form-control" [(ngModel)]="InputAlbumNameV"> <br>
+        <label>Total de Tracks: </label>
+        <input class="form-control" [(ngModel)] ="InputTotalTracksV"> <br>
+        <label>Año de lanzamiento: </label>
+        <input class="form-control" [(ngModel)] = "InputReleaseYearV"> <br>
+        <label>Popularidad: </label>
+        <input class="form-control" [(ngModel)] = "InputPopularityV"> <br>
+        <label>Género: </label>
+        <input class="form-control" [(ngModel)] = "InputGenres"> <br>
+        <label>Artista:</label>
+        <br>
+        <select name="artist" formControlName="artist">
+            <option *ngFor="let artist of artistList" [ngValue]="artist">{{artist.nameArtist}}</option>
+        </select>
+
+
+    </div>
+    <div class="modal-footer">
+        <button class="btn btn-primary" (click)="modal.close()" style="align-items: center;"> Guardar</button>
+    </div>
+</ng-template>
+
 <!--Agregar Album-->
-<div class="card" style="background-color: rgb(162, 196, 224); padding: 20px; border-radius: 12px;">
-    <h2 style="color: aliceblue;">Agregar Album:</h2>
+<div class="card" style="background-color:  rgb(188, 150, 224); padding: 20px; border-radius: 12px;">
+    <h3 style="color: rgb(91, 58, 122);">Agregar Album:</h3>
     <br>
     <form [formGroup]="albumForm">
         <tfoot>
@@ -78,6 +109,15 @@
                 </td>
 
             </tr>
+            <tr>
+                <td><p>ID</p></td>
+                <td><p>Nombre</p></td>
+                <td><p>Total Canciones</p></td>
+                <td><p>Año de lanzamiento</p></td>
+                <td><p>Popularidad</p></td>
+                <td><p>Género</p></td>
+                <td><p>Artista</p></td>
+            </tr>
             <br>
             <tr>
                 
@@ -90,3 +130,4 @@
 
     </form>
 </div>
+
