--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,5 +1,5 @@
 <!-- Just an image -->
-<nav class="navbar navbar-light" style="background-color: #000000;">
+<nav class="bg-dark navbar navbar-light">
     <a class="navbar-brand" href="#" style="margin-left: 10px;">
       <img src="assets/Iconss.png" width="50" height="50" alt="">
     </a>
@@ -7,3 +7,10 @@
   </nav>
 <app-album-list></app-album-list>
 <!--<app-artist-list></app-artist-list>-->
+<footer class="bg-dark text-center text-lg-start">
+  <!-- Copyright -->
+  <div class="text-center p-3" style="color: rgb(188, 150, 224)">
+    © 2023 Copyright
+  </div>
+  <!-- Copyright -->
+</footer>
