--- a/src/app/components/album-list/album-list.component.html
+++ b/src/app/components/album-list/album-list.component.html
@@ -2,7 +2,7 @@
 <!--LISTA DE ALBUMS-->
 <h2 class="text-center text-uppercase" style="color: rgb(188, 137, 236); font-weight: bold;">Lista de Albums</h2>
 <table class="table">
-    <thead class="thead-dark" style="background-color: black; color: rgb(188, 150, 224);">
+    <thead class="bg-dark thead-dark" style=" color: rgb(188, 150, 224);">
         <tr>
             <th scope="col">ID</th>
             <th scope="col">Nombre</th>
@@ -67,7 +67,7 @@
 
     </div>
     <div class="modal-footer" style="background-color:  rgb(188, 150, 224);">
-        <button class="btn btn-light" (click)="modal.close()" style="align-items: center; margin-right: 40%;"> Guardar</button>
+        <button class="btn btn-light" (click)="modal.close()" style="align-items: center; margin-right: 43%;"> Guardar</button>
     </div>
 </ng-template>
 
